<resources>


    <!--buttons-->
    <string name="OK">OK</string>

    <!--errors-->
    <string name="ACCESS_DENIED">Access Denied</string>

    <!--actions-->
    <string name="RETRIEVING_KEY">Retrieving key</string>
    <string name="UNLOCKING">Unlocking</string>

    <!--permissions-->
    <string name="GEOFENCE_PERMISSION">Geofencing is enabled for this lock. To unlock this door we need to have location permissions.</string>
    <string name="LOCATION_PERMISSION_TITLE">Location permission needed</string>
    <string name="LOCATION_PERMISSION_TEXT">For extra security, your building manager has requested for location services to be enabled on your device. Don’t worry - your data will never be stored or sent to us, and we only use your location briefly when the app is open.</string>
    <string name="UNLOCKED">Unlocked</string>
    <string name="CHECKING_GEOFENCE">Checking geofence</string>
    <string name="ACCESS_DENIED_GEOFENCE">You are not close enough to the door to unlock it.</string>
    <string name="scan_QR">Scan QR</string>
    <string name="touch_nfc">Touch NFC</string>
    <string name="tile_id_not_valid">Tile ID not valid. Closing…</string>
    <string name="no_user_logged_in">No user account found. Make sure you are logged in.</string>
    <string name="nfc_not_enabled_message">Please activate NFC and press Back to return to the application!</string>
    <string name="dismiss">Dismiss</string>
    <string name="nfc_desc">Touch the NFC tile next to the door to unlock</string>
    <string name="send">Send</string>
    <string name="verify_device_desc">Enter your verification code send to %s</string>
    <string name="verify_device_desc_no_method">Enter your verification code sent</string>
    <string name="resend_code">Re-send invite code</string>
    <string name="code_send">Code has been sent</string>
    <string name="time_until_code">Time until you can request a new code: </string>
    <string name="code_not_send">Code was not sent</string>
    <string name="code_not_send_message">Please check your internet connection and try again later.</string>
    <string name="code_requested_too_many_times">Please try again in a minute.</string>
    <string name="wrong_code">Invalid code</string>
    <string name="wrong_code_message">Please check if you have entered all digits correctly from the latest invite code we have sent you.</string>
    <string name="verify_device_desc_whatsapp">Enter your verification code send via WhatsApp to %s</string>
    <string name="Please_Wait">Please wait.</string>
    <string name="locks_to_unlock_list_title">Pick a lock</string>

</resources>
