<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ddColorPrimary">


    <ImageView
        android:id="@+id/nfc_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/ic_scan_nfc"
        app:tint="?attr/ddColorAccent" />


    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_qr_tile"
        android:layout_below="@+id/nfc_image"
        android:id="@+id/ivTile"/>

    <TextView
        android:id="@+id/tvScanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivTile"
        android:text="@string/touch_nfc"
        android:textAlignment="center"
        android:textColor="?attr/ddTextColorPrimary"
        android:textSize="24dp"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvScanTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/nfc_desc"
        android:textColor="?attr/ddTextColorPrimary"
        android:textSize="16sp"
        />




    <TextView
        android:id="@+id/tvDismiss"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/ddColorAccent"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/dismiss"
        android:textColor="@android:color/white"
        android:textSize="20dp" />


</RelativeLayout>