<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ddColorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:padding="4dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/tvVerifyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="Verify your new device"
        android:textAlignment="center"
        android:textColor="?attr/ddTextColorPrimary"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvVerifyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVerifyTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/sideMargin"
        android:paddingRight="@dimen/sideMargin"
        android:text="@string/verify_device_desc"
        android:textColor="?attr/ddTextColorPrimary"
        android:textSize="16dp" />


    <TextView
        android:id="@+id/tvReSendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVerifyDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:padding="8dp"
        android:text="@string/resend_code"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/ddColorAccent"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/tvReSendCodeSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReSendCode"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_until_code"
            android:textAlignment="center"
            android:textColor="?attr/ddTextColorPrimary"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="60"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/ddTextColorPrimary"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/tvReSendCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edDigit1"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/digit_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@id/edDigit2"
            android:textColor="?attr/ddColorAccent"
            android:textSize="16dp"
            android:windowSoftInputMode="stateVisible" />

        <EditText
            android:id="@+id/edDigit2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/digit_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@id/edDigit3"
            android:textColor="?attr/ddColorAccent"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edDigit3"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="@drawable/digit_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@id/edDigit4"
            android:textColor="?attr/ddColorAccent"
            android:textSize="16dp" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="-"
            android:textColor="@color/dark_grey"
            android:textSize="30dp" />


        <EditText
            android:id="@+id/edDigit4"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/digit_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@id/edDigit5"
            android:textColor="?attr/ddColorAccent"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/edDigit5"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/digit_background"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@id/edDigit6"
            android:textColor="?attr/ddColorAccent"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/edDigit6"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/digit_background"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="?attr/ddColorAccent"
            android:textSize="16dp" />


    </LinearLayout>


    <TextView
        android:id="@+id/tvSend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dismiss_btn_height"
        android:layout_alignParentBottom="true"
        android:background="?attr/ddColorAccent"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <FrameLayout
        android:id="@+id/verifyLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvVerifyTitle"
        android:background="?attr/ddColorPrimary"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="?attr/ddColorAccent" />

    </FrameLayout>

</RelativeLayout>